app/main/assets/css/app.css.scss
// Place your apps css here

// fonts
@import url(https://fonts.googleapis.com/css?family=Lato:300);
@import url(http://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope);

// variables
$em-normalize-ratio: 62.5%;

// mixins
@mixin btn-on-center {
  text-align: center;
}

@mixin fadein-animation {
  from {
    color: yellow;
    font-size: 0rem;
    opacity: 0;
  }
  25% {
    opacity: 0.1;
  }
  50% {
    color: yellow;
    font-size: 20.0rem;
  }
  75% {
    color: yellow;
    font-size: 20.0rem;
  }
  to {
    color: white;
    opacity: 1.0;
  }
}

@mixin snow-animation {
  0% {
    background-position: 0 0;
  }
  100% {
    background-position:500px 500px;
  }
}

html {
  font-size: $em-normalize-ratio;
}

body {
  background-color: black;
  background-image: url('/assets/images/background.png');
  font-family: Lato, 'Helvetica Neue', 'Arial', sans-serif;
  font-size: 3.2rem;
  color: white;
}

h1.title {
  font-family: 'Annie Use Your Telescope', 'Helvetica Neue', 'Arial', sans-serif;
  font-size: 6.5rem;
  color: white;
  text-shadow: 0 0 20px yellow;
  text-align: center;
  margin-top: 2.0rem;
}


.add-person-form {
  @include btn-on-center;
  margin-top: 6.0rem;

}

.persons {
  margin-top: 4.0rem;
  line-height: 5.0rem;
}

.remove-btn {
  font-size: 1.2rem;
  margin-left: .5rem;
  padding: .3rem .6rem;
}

.pick-up-form {
  @include btn-on-center;
  margin-top: 5.0rem;
}

.pick-up-btn {
  font-size: 2.8rem;
  padding: 2.0rem 2.0rem;
}

.view-history-form {
  @include btn-on-center;
  margin-top: 4.0rem;
}

.clear-history-form {
  @include btn-on-center;
  margin-top: 1.5rem;
}

.footer {
  font-size: 1.6rem;
  margin-top: 6.0rem;
}

#overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
  background: rgba(0, 0, 0, 0.8);
  background-image: url('/assets/images/snow.png');
  background-color: rgba(0, 0, 0, 0.8);
  zIndex: 1;
  animation: snow 30s linear infinite;
  -moz-animation: snow 30s linear infinite;
  -webkit-animation: snow 30s linear infinite;

}

#result {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 100%;
  overflow: hidden;
  height: 600px;
  text-align: center;
  font-size: 12.0rem;
  text-shadow: 0 0 20px yellow;
  padding-left: 2.0rem;
  padding-right: 2.0rem;
}

#info-message {
  font-size: 2.0rem;
  color: #aaa;
  padding-top: 3.0rem;
  padding-left: 5.0rem;
}

#spotlight-person {
  -webkit-animation-name: fadein;
  -webkit-animation-duration: 5s;
  -moz-animation-name: fadein;
  -moz-animation-duration: 5s;
  -ms-animation-name: fadein;
  -ms-animation-duration: 5s;
}

@-webkit-keyframes fadein {
  @include fadein-animation
}

@-moz-keyframes fadein {
  @include fadein-animation
}

@-ms-keyframes fadein {
  @include fadein-animation
}

@keyframes fadein {
  @include fadein-animation
}

@keyframes snow {
  @include snow-animation
}

@-moz-keyframes snow {
  @include snow-animation
}

@-webkit-keyframes snow {
  @include snow-animation
}

